[package]
name = "bloomy-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"

[dev-dependencies]
rand = "0.8.5"
fastbloom-rs = "0.5.4"
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
