[package]
name = "bloomy-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Fast bloom filter implementation"
repository = "https://github.com/niki4smirn/bloomy-rs"
readme = "README.md"
keywords = ["bloom", "filter", "bloom filter", "bloom-filter", "bloomfilter"]
categories = ["data-structures", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"

[dev-dependencies]
rand = "0.8.5"
fastbloom-rs = "0.5.4"
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
